Fix responsive design and align breakpoints with Docker website

--- a/playground/src/components/Docker/CardLink/card-link.styles.scss
+++ b/playground/src/components/Docker/CardLink/card-link.styles.scss
@@ -1,5 +1,5 @@
 .card-link {
-  width: 32.2%;
+  width: 100%;
   margin: 0.4rem;
   padding: 1.5rem;
   box-shadow: 0 0 5px -3.3px;
@@ -21,6 +21,19 @@
   &:hover {
     transition: transform 200ms;
     transform: scale(1.01)
+  }
+
+  @media (min-width: 768px) {
+    width: 46.9%;
+    // width: 50%;
+    // max-width: 362px;
+    // margin: 5px;
+  }
+  
+  @media (min-width: 1200px) {
+    // width: 32.2%;
+    width: 33.33%;
+    max-width: 377px;
   }
 }
 
