--- a/playground/src/components/Docker/Navbar/navbar.styles.scss
+++ b/playground/src/components/Docker/Navbar/navbar.styles.scss
@@ -13,6 +13,7 @@ body {
 nav {
   transition: all 500ms;
   background-color: #2697ED;
+  width: 100%;
 
   img, li {
     &:hover {
